--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 </div>
 
                 <h1 style = "text-align:center">Kejal Bhuva</h1>
-                    <a href=http://maps.google.com/?q=30WoodcroftKenningtonOxford>30 Woodcroft, Kennington, Oxford, Oxfordshire</a>
-                    <a href=>+447891609265</a>
+                    <a href=http://maps.google.com/?q=30WoodcroftKenningtonOxford>Oxford, Oxfordshire</a>
+                    <a href=>+447791604265</a>
                     <a href="https://github.com/kstrikesbak/">GITHUB website</a>
                 
                 <blockquote><code id="proverb">He who does not travel, does not know the value of men. (Moorish proverb)</code></blockquote> 
